// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Domain /> <TestDomain /> should render correctly with ACTIVE status 1`] = `
Array [
  <div
    className="sc-bdnxRM hXMCPX toasts-container toasts-container--top"
  />,
  <div
    className="sc-bdnxRM iyonkx toasts-container toasts-container--top-left"
  />,
  <div
    className="sc-bdnxRM ffNWZe toasts-container toasts-container--top-right"
  />,
  <div
    className="sc-bdnxRM drnSqO toasts-container toasts-container--bottom"
  />,
  <div
    className="sc-bdnxRM lhKBDU toasts-container toasts-container--bottom-left"
  />,
  <div
    className="sc-bdnxRM fjDKdX toasts-container toasts-container--bottom-right"
  />,
  <form
    className="sc-bdnxRM ikHgea"
    id="custom-domain-form"
    onSubmit={[Function]}
  >
    <h4
      className="sc-bdnxRM lgNWHB cap-heading"
    >
      domain.name
    </h4>
    <div
      className="sc-bdnxRM byCbgM"
    >
      <div
        className="sc-bdnxRM dkwaPi"
      >
        <div
          className="sc-bdnxRM dgrqOD"
        >
          <p
            className="sc-bdnxRM cTaJwS cap-text"
          >
            capco.subdomain
          </p>
          <p
            className="sc-bdnxRM WTDFb cap-text"
          >
            capco.subdomain.description
          </p>
        </div>
      </div>
      <div
        className="sc-bdnxRM fjTIYU cap-form-control"
        role="group"
      >
        <label
          className="sc-bdnxRM kGZvuB cap-form-label"
          htmlFor="subDomain"
          style={
            Object {
              "marginLeft": 0,
              "marginTop": 0,
            }
          }
        >
          <p
            className="sc-bdnxRM WxzeU cap-text"
            style={
              Object {
                "marginLeft": 0,
                "marginTop": 0,
              }
            }
          >
            sub-domain
          </p>
        </label>
        <input
          aria-required={true}
          className="sc-bdnxRM sc-TtZnY dUfREC hOdGym cap-input"
          disabled={true}
          id="subDomain"
          name="subDomain"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder="admiun.project.create.title.placeholder"
          required={true}
          type="text"
          value="capco.domain.com"
        />
      </div>
    </div>
    <div
      className="sc-bdnxRM hIfpSw"
    >
      <div
        className="sc-bdnxRM dkwaPi"
      >
        <div
          className="sc-bdnxRM dgrqOD"
        >
          <p
            className="sc-bdnxRM cTaJwS cap-text"
          >
            custom-domain
          </p>
          <p
            className="sc-bdnxRM WTDFb cap-text"
          >
            custom-domain.description
          </p>
        </div>
      </div>
      <div
        className="sc-bdnxRM dkwaPi"
      >
        <div
          className="sc-bdnxRM fjTIYU cap-form-control"
          role="group"
        >
          <label
            className="sc-bdnxRM kGZvuB cap-form-label"
            htmlFor="customDomain"
            style={
              Object {
                "marginLeft": 0,
                "marginTop": 0,
              }
            }
          >
            <p
              className="sc-bdnxRM WxzeU cap-text"
              style={
                Object {
                  "marginLeft": 0,
                  "marginTop": 0,
                }
              }
            >
              custom-domain-name
            </p>
          </label>
          <span
            className="sc-bdnxRM eobapS cap-form-guideline"
          >
            domain.must.point.to.cname
            <p
              className="sc-bdnxRM WTDFb cap-text"
            >
              domain.save.help
            </p>
          </span>
          <div
            className="sc-bdnxRM iPtnXE cap-input-group"
          >
            <div
              className="sc-bdnxRM ipHSTK"
            >
              <div
                className="sc-bdnxRM dYcHSW sc-fXazdy fmGqjI cap-tag"
                style={Object {}}
                title="custom.domain.com"
              >
                <p
                  className="sc-bdnxRM gXaTKi cap-text cap-tag__label"
                >
                  custom.domain.com
                </p>
                <div
                  aria-label="close"
                  className="sc-bdnxRM hJRjaE cap-tag__closeButton"
                  onClick={[Function]}
                  role="button"
                  style={
                    Object {
                      "opacity": 0,
                      "right": "0rem",
                    }
                  }
                >
                  <svg
                    className="sc-bdnxRM sc-eJocfa jkKNnK iyiXbf cap-icon"
                    fill="none"
                    viewBox="0 0 12 12"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M1 11L11 1M1 1l10 10"
                      stroke="currentColor"
                      strokeLinecap="round"
                      strokeLinejoin="round"
                      strokeWidth={0.8}
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      aria-label="delete-custom-domain"
      aria-modal={true}
      data-dialog={true}
      hidden={true}
      id="id-g"
      onAnimationEnd={[Function]}
      onBlur={[Function]}
      onKeyDown={[Function]}
      onTransitionEnd={[Function]}
      role="dialog"
      style={
        Object {
          "display": "none",
        }
      }
      tabIndex={-1}
    />
  </form>,
]
`;

exports[`<Domain /> <TestDomain /> should render correctly with IDLE status 1`] = `
Array [
  <div
    className="sc-bdnxRM hXMCPX toasts-container toasts-container--top"
  />,
  <div
    className="sc-bdnxRM iyonkx toasts-container toasts-container--top-left"
  />,
  <div
    className="sc-bdnxRM ffNWZe toasts-container toasts-container--top-right"
  />,
  <div
    className="sc-bdnxRM drnSqO toasts-container toasts-container--bottom"
  />,
  <div
    className="sc-bdnxRM lhKBDU toasts-container toasts-container--bottom-left"
  />,
  <div
    className="sc-bdnxRM fjDKdX toasts-container toasts-container--bottom-right"
  />,
  <form
    className="sc-bdnxRM ikHgea"
    id="custom-domain-form"
    onSubmit={[Function]}
  >
    <h4
      className="sc-bdnxRM lgNWHB cap-heading"
    >
      domain.name
    </h4>
    <div
      className="sc-bdnxRM byCbgM"
    >
      <div
        className="sc-bdnxRM dkwaPi"
      >
        <div
          className="sc-bdnxRM dgrqOD"
        >
          <p
            className="sc-bdnxRM cTaJwS cap-text"
          >
            capco.subdomain
          </p>
          <p
            className="sc-bdnxRM WTDFb cap-text"
          >
            capco.subdomain.description
          </p>
        </div>
      </div>
      <div
        className="sc-bdnxRM fjTIYU cap-form-control"
        role="group"
      >
        <label
          className="sc-bdnxRM kGZvuB cap-form-label"
          htmlFor="subDomain"
          style={
            Object {
              "marginLeft": 0,
              "marginTop": 0,
            }
          }
        >
          <p
            className="sc-bdnxRM WxzeU cap-text"
            style={
              Object {
                "marginLeft": 0,
                "marginTop": 0,
              }
            }
          >
            sub-domain
          </p>
        </label>
        <input
          aria-required={true}
          className="sc-bdnxRM sc-TtZnY dUfREC hOdGym cap-input"
          disabled={true}
          id="subDomain"
          name="subDomain"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder="admiun.project.create.title.placeholder"
          required={true}
          type="text"
          value="capco.domain.com"
        />
      </div>
    </div>
    <div
      className="sc-bdnxRM hIfpSw"
    >
      <div
        className="sc-bdnxRM dkwaPi"
      >
        <div
          className="sc-bdnxRM dgrqOD"
        >
          <p
            className="sc-bdnxRM cTaJwS cap-text"
          >
            custom-domain
          </p>
          <p
            className="sc-bdnxRM WTDFb cap-text"
          >
            custom-domain.description
          </p>
        </div>
      </div>
      <div
        className="sc-bdnxRM dkwaPi"
      >
        <div
          className="sc-bdnxRM fjTIYU cap-form-control"
          role="group"
        >
          <label
            className="sc-bdnxRM kGZvuB cap-form-label"
            htmlFor="customDomain"
            style={
              Object {
                "marginLeft": 0,
                "marginTop": 0,
              }
            }
          >
            <p
              className="sc-bdnxRM WxzeU cap-text"
              style={
                Object {
                  "marginLeft": 0,
                  "marginTop": 0,
                }
              }
            >
              custom-domain-name
            </p>
          </label>
          <span
            className="sc-bdnxRM eobapS cap-form-guideline"
          >
            domain.must.point.to.cname
            <p
              className="sc-bdnxRM WTDFb cap-text"
            >
              domain.save.help
            </p>
          </span>
          <div
            className="sc-bdnxRM iPtnXE cap-input-group"
          >
            <input
              className="sc-bdnxRM sc-TtZnY dUfREC hOdGym cap-input"
              disabled={false}
              id="customDomain"
              name="customDomain"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              placeholder="custom-domain-placeholder"
              required={false}
              type="text"
            />
            <button
              className="sc-bdnxRM sc-lbVvki cMVVDx cgYPRG cap-button"
              disabled={true}
              type="submit"
            >
              global.use
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      aria-label="delete-custom-domain"
      aria-modal={true}
      data-dialog={true}
      hidden={true}
      id="id-g"
      onAnimationEnd={[Function]}
      onBlur={[Function]}
      onKeyDown={[Function]}
      onTransitionEnd={[Function]}
      role="dialog"
      style={
        Object {
          "display": "none",
        }
      }
      tabIndex={-1}
    />
  </form>,
]
`;
